# JustRayzist

./: .gitignore  JustRayzist.md  LICENSE  README.md  RunMeFirst.bat  StartWeb.bat  pyproject.toml
JustRayzist/: README.md  StartWeb.bat  pyproject.toml
JustRayzist/app/: __init__.py  version.py
JustRayzist/app/api/: inference_service.py  main.py
JustRayzist/app/cli/: main.py
JustRayzist/app/config/: profiles.py  settings.py
JustRayzist/app/core/: logging.py  upscale.py
JustRayzist/app/core/backends/: __init__.py  diffusers_zimage.py
JustRayzist/app/core/memory/: telemetry.py
JustRayzist/app/core/pipeline_factory/: zimage.py
JustRayzist/app/core/worker/: types.py
JustRayzist/app/entrypoints/: __init__.py  web_entry.py
JustRayzist/app/storage/: __init__.py  gallery_index.py
JustRayzist/app/ui/: app.js
JustRayzist/docs/: TROUBLESHOOTING.md  USAGE.md
JustRayzist/launch/: ascii_logo_blockier.ans  cli.ps1  web.ps1
JustRayzist/models/packs/: README.md  modelpack.yaml.example
JustRayzist/models/packs/Rayzist_bf16/: modelpack.yaml  modelpack.yaml.template
JustRayzist/scripts/: bootstrap_env.ps1  build_portable.ps1  fetch_model_assets.ps1  package_release.ps1  test_text_encoder_rewrite.py
JustRayzist/scripts/pyinstaller/: build_onedir.ps1
JustRayzist/scripts/release/: clean_legacy_artifacts.ps1  package_release.ps1
JustRayzist/tests/: test_api_routes.py  test_gallery_index.py  test_model_pack_validation.py  test_refine_tiling_policy.py  test_settings_smoke.py  test_soak_report.py  test_upscale_compact.py  test_upscale_plksr.py
(+56 files in other folders)
